fix z-index bug

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -166,8 +166,10 @@
 			padding-top: 12px;
 		}
 		.logo{
-			margin-bottom: -21px;
+			position: relative;
+			z-index: 2;
 			display: inline-block;
+			margin-bottom: -21px;
 		}
 		.out-links-block{
 			margin-right: 21px;
@@ -189,6 +191,9 @@
 			}
 			.menu-links{
 			 /* сделать совместимость с ие*/
+				height: 100%;
+				 position: relative;
+				z-index: 1;
 				text-align: justify;
 			}
 			/*--Inline justify hack------*/
@@ -198,7 +203,7 @@
 				display: inline-block;
 			}
 			.menu-links li{
-				margin-top: 21px;
+				margin-top: 22px;
 				display: inline-block;
 				font-size: 14px;
 			}
@@ -262,8 +267,8 @@
 					margin-right: -9px;
 				}
 				.nearrest-concert-place{
-					margin-left: 75px;
-					margin-top: 21px;
+					margin-left: 32px;
+					margin-top: 11px;
 				}
 
 			/*--music--*/
@@ -287,8 +292,6 @@
 		/*---END Main page------------------------------*/
 
 		.field-bg{
-			position: relative;
-			z-index: -1;
 			padding: 32px 21px 32px;
 			text-align: justify;
 		}
